--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,3 +1,5 @@
+/* src/styles/Navbar.css */
+
 .navbar {
   display: flex;
   align-items: center;
@@ -207,5 +209,3 @@
     display: block;
   }
 }
-
-
