--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* index.css */
+
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Sora:wght@400;600;700&display=swap');
 
 :root {
