--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -17,3 +17,16 @@
   margin: 0 0.8rem;
   text-decoration: none;
 }
+
+
+@media (max-width: 600px) {
+  .footer-links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer-links a {
+    margin-bottom: 0.5rem;
+  }
+}
